<resources>
    <string name="app_name">File Explorer</string>

    <string name="miDelete">Delete</string>
    <string name="miMove">Move</string>
    <string name="miCopy">Copy</string>
    <string name="miRename">Rename</string>
    <string name="miDetails">Details</string>
    <string name="miSelectAll">Select All</string>
    <string name="mi_open_with">Open With</string>
    <string name="title_activity_media">MediaActivity</string>

    <string name="open_with_chooser_title">open with</string>

    <string name="loading">loading…</string>
    <string name="search_hint">Enter search text</string>
    <string name="miSearch">Search</string>
    <string name="empty_folder">Empty Folder</string>
    <string name="show_hidden_files">show hidden files</string>
    <string name="search">Search</string>
    <string name="new_folder">New Folder</string>
    <string name="view">View</string>
    <string name="name">name</string>
    <string name="cancel">Cancel</string>
    <string name="paste">Paste</string>
    <string name="pick_paste_location">Pick Paste Location</string>
    <string name="recent_files_title">Recent Files</string>
    <string name="mi_pin">Pin/unPin</string>
    <string name="pined_files_title">Pined Files</string>
    <string name="pined_file_image_description">pined file</string>
    <string name="file_thumbnail_image_description">file thumbnail</string>
    <string name="play_arrow_image_description">play arrow</string>
    <string name="selected_icon_image_description">selected icon</string>
    <string name="quick_access_is_empty_message">no files</string>
    <string name="unpin">unpin</string>
    <string name="dark_mode">dark mode</string>
    <string name="edit_quick_access">edit_quick_access</string>
    <string name="sort_by_title">Sort by</string>
    <string name="rb_name">Name</string>
    <string name="rb_size">Size</string>
    <string name="rb_date">Date</string>
    <string name="order_title">Order</string>
    <string name="rb_asc">Ascending</string>
    <string name="rb_desc">Descending</string>
</resources>